Now, a branch for a direct camera access app. (Not linking, i.e. through intents, to the stock camera app)

--- a/ReconTest/app/src/main/res/values/strings.xml
+++ b/ReconTest/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Recon Test</string>
+    <string name="landing_text">Click Select to take picture</string>
 </resources>
